--- a/index.html
+++ b/index.html
@@ -13,3 +13,25 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <h1>Leonidas' Portfolio</h1>
+    <h2>I'm trying my luck with Web development</h2>
+    <hr/>
+    <h3><a href="./public/birthday-invite.html">Birthday Project</a></h3>
+    <img src = "assets/images/birthday-invite.png" alt = "birthday invite" style="width: 400px; height: auto;" />
+    <hr/>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <img src = "assets/images/movie-ranking.png" alt = "movie ranking project" style="width: 400px; height: auto;" />
+    <hr/>
+    <h4><a href="./public/about.html">About me</a> &nbsp; <a href="./public/contact.html">Contact me</a></h4>
+
+</body>
+</html>
